Changelog for HLint

    Add a few addition hints (Functor laws)
    #137, add cpphs support
    #189, give hints for redundant imports
    Upgrade to haskell-src-exts 1.1.*
1.6.5
    #206, better presentation of parse errors
    #208, give the correct precedence to ==> in source files
1.6.4
    Start of changelog